# Bilibili2Bangumi

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  auth.py  b2b.py  bili2bangumi.py  bili2bgm.py  config.py  config.py.example  episode_progress.py  pyproject.toml  requirements.txt  update.py  utilities.py
lib/: auth.py  migrate.py
src/bilibili2bangumi/: __init__.py  bgm.py  bili.py  config.py.example  data.py  episode_progress.py  main.py  update.py  utilities.py
src/bilibili2bangumi/bangumi/: api.py  auth.py
src/bilibili2bangumi/bilibili/: api.py  auth.py
